Bug 1534548 - Align header labels left, show sorting icon; r=Honza
Differential Revision: https://phabricator.services.mozilla.com/D23119

UltraBlame original commit: 2de5ee2843c805842e3cd8adf8691590a7ea5452

--- a/devtools/client/netmonitor/src/assets/styles/RequestList.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestList.css
@@ -658,7 +658,7 @@ text
 -
 align
 :
-center
+left
 ;
 color
 :
@@ -746,7 +746,7 @@ text
 -
 align
 :
-center
+left
 ;
 vertical
 -
@@ -754,15 +754,6 @@ align
 :
 middle
 ;
-/
-*
-Align
-button
-text
-to
-center
-*
-/
 width
 :
 100
@@ -793,11 +784,23 @@ button
 -
 icon
 {
+/
+*
+display
+icon
+only
+when
+column
+sorted
+otherwise
 display
 :
-inline
--
-block
+none
+*
+/
+display
+:
+none
 ;
 width
 :
@@ -828,6 +831,88 @@ vertical
 align
 :
 middle
+;
+}
+.
+requests
+-
+list
+-
+header
+-
+button
+[
+data
+-
+sorted
+]
+>
+.
+button
+-
+icon
+{
+/
+*
+display
+icon
+only
+when
+column
+sorted
+*
+/
+display
+:
+inline
+-
+block
+;
+}
+.
+requests
+-
+list
+-
+header
+-
+button
+[
+data
+-
+sorted
+]
+>
+.
+button
+-
+text
+{
+/
+*
+when
+sorted
+-
+adjust
+width
+to
+fit
+the
+icon
+inside
+the
+button
+*
+/
+width
+:
+calc
+(
+100
+%
+-
+11px
+)
 ;
 }
 .
@@ -1715,11 +1800,6 @@ height
 :
 16px
 ;
-margin
-:
-0
-4px
-;
 vertical
 -
 align
@@ -2042,19 +2122,57 @@ requests
 -
 list
 -
-cause
+column
+{
+padding
+-
+inline
+-
+start
+:
+4px
+;
+}
+.
+request
+-
+list
+-
+item
 .
 requests
 -
 list
 -
-column
+waterfall
 {
 padding
 -
-left
+inline
+-
+start
 :
-5px
+0px
+;
+}
+.
+request
+-
+list
+-
+item
+.
+status
+-
+code
+{
+margin
+-
+inline
+-
+start
+:
+0px
 ;
 }
 .
